--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>happy-birthday-girlfriend</title>
+    <meta property="og:title" content="Kisgirlnek" />
+    <meta property="og:description" content="20th birthday" />
+    <meta property="og:type" content="website" />
+    <link rel="icon" href="/public/favicon.ico" />
+    <title>Kisgirl szülinap</title>
   </head>
   <body>
     <div id="root"></div>
